Updated auction examples of the tutorial